--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 <div class="topic">
 	<h1>Welcome to Git hub</h1>
 </div>
-<div class="rest"> 
-<p>Commit 2</p>
-<p>Commit 3</p>
-<p>Commit 4</p>
-<p>Commit 5</p>
-<p>Commit 6</p>
-<p>Commit 7</p>
+<div class="content">
+            <div class="1"> 
+                      <p>Commit 2</p>
+                      <p>Commit 3</p>
+                      <p>Commit 4</p>
+                      <p>Commit 5</p>
+                      <p>Commit 6</p>
+                      <p>Commit 7</p>
+            </div>
+            <div class="2">
+                      <p>Commit 8</p>	
+
+            </div>
 </div>
-
-
 
 
 </body>
