--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
             <div class="2">
                       <p>Commit 8</p>	
+                      <p>Commit 9</p>
 
             </div>
 </div>
