--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>Welcome to Git hub</h1>
 </div>
 <div class="content">
-            <div class="1"> 
+            <div class="a"> 
                       <p>Commit 2</p>
                       <p>Commit 3</p>
                       <p>Commit 4</p>
@@ -17,9 +17,10 @@
                       <p>Commit 6</p>
                       <p>Commit 7</p>
             </div>
-            <div class="2">
+            <div class="b">
                       <p>Commit 8</p>	
                       <p>Commit 9</p>
+                      <p>Commit 10</p>
 
             </div>
 </div>
