--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                       <p>Commit 8</p>	
                       <p>Commit 9</p>
                       <p>Commit 10</p>
+                      <p>Commit 11</p>
 
             </div>
 </div>
