--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                       <p>Commit 9</p>
                       <p>Commit 10</p>
                       <p>Commit 11</p>
+                      <p>Commit 12</p>
 
             </div>
 </div>
