--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                       <p>Commit 10</p>
                       <p>Commit 11</p>
                       <p>Commit 12</p>
+                      <p>Commit 13</p>
 
             </div>
 </div>
